# mcp-toolbox

./: .env.example  .gitignore  GETTING_STARTED.md  OLLAMA_SETUP.md  QUICKSTART.md  README.md  inspector-config.json  pyproject.toml  requirements.txt  verify_setup.py
client/: example_usage.py  inspector_integration.md
diagrams/: architecture.mmd  lifecycle.mmd
host/: config.yaml  run_ollama.py
server/: http_server.py  registry.py  stdio_server.py
server/tools/: __init__.py  format_tools.py  network_tools.py  text_tools.py
tests/: __init__.py  test_format_tools.py  test_network_tools.py  test_text_tools.py
